hiding toolbar on rate experience tab

--- a/app/src/main/res/layout/fragment_request_permissions.xml
+++ b/app/src/main/res/layout/fragment_request_permissions.xml
@@ -12,6 +12,12 @@
         android:orientation="vertical"
         android:background="@color/colorTextSix">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/colorTextFive"
+            tools:ignore="ContentDescription,SmallSp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
