--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,9 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.detail_activity.DetailActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/colorTextFour"
+            tools:ignore="ContentDescription,SmallSp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/white">
+
+            <LinearLayout
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="21sp"
+                    tools:text="FINGERPRINT SENSOR TEST"
+                    android:paddingTop="10sp"
+                    android:paddingBottom="10sp"
+                    android:paddingLeft="15sp"
+                    android:textColor="@color/colorMajorDark"
+                    android:id="@+id/data_name"
+                    fontPath="fonts/tsc.ttf"
+                    tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="@color/colorMajorDark"
+                    app:cardCornerRadius="15sp"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginBottom="10sp"
+                    tools:ignore="RtlHardcoded,RtlSymmetry">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        tools:text="Sensor"
+                        android:textColor="@color/white"
+                        android:paddingLeft="10sp"
+                        android:paddingRight="10sp"
+                        android:paddingTop="3sp"
+                        android:paddingBottom="3sp"
+                        android:id="@+id/data_type"
+                        fontPath="fonts/tsc.ttf"
+                        tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
+
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="70sp"
+                android:layout_height="70sp"
+                tools:src="@drawable/baseline_bluetooth_black_48"
+                android:tint="@color/colorMajorDark"
+                android:scaleType="centerInside"
+                android:padding="10sp"
+                android:layout_gravity="center_vertical"
+                tools:ignore="ContentDescription"
+                android:id="@+id/data_drawable"/>
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="2sp"
+            android:background="@color/colorMajorDark"
+            tools:ignore="ContentDescription,SmallSp" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/container">
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
