nested scrollview perfectly working

--- a/app/src/main/res/layout/layout_basic_information.xml
+++ b/app/src/main/res/layout/layout_basic_information.xml
@@ -26,7 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/info_recycler"
-        android:background="@color/colorTextSix">
+        android:background="@color/colorTextSix"
+        android:nestedScrollingEnabled="false">
 
     </android.support.v7.widget.RecyclerView>
 
