--- a/app/src/main/res/layout/fragment_proximity.xml
+++ b/app/src/main/res/layout/fragment_proximity.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.NestedScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context=".view.detail_activity.sensors.proximity_sensor.ProximityFragment">
 
-    <ImageView
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="1sp"
-        android:background="@color/colorMajorDark"
-        tools:ignore="ContentDescription,SmallSp" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:context=".view.detail_activity.sensors.proximity_sensor.ProximityFragment">
 
-    <include layout="@layout/layout_basic_information" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/colorMajorDark"
+            tools:ignore="ContentDescription,SmallSp" />
 
-</LinearLayout>
+        <include layout="@layout/layout_basic_information" />
+
+    </LinearLayout>
+
+</android.support.v4.widget.NestedScrollView>
+
