proximity sensor test screen perfectly set

--- a/app/src/main/res/layout/layout_basic_information.xml
+++ b/app/src/main/res/layout/layout_basic_information.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     android:background="@color/white">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1sp"
+        android:background="@color/colorTextThree"
+        tools:ignore="ContentDescription,SmallSp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
