--- a/app/src/main/res/layout/fragment_proximity.xml
+++ b/app/src/main/res/layout/fragment_proximity.xml
@@ -11,15 +11,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:context=".view.detail_activity.sensors.proximity_sensor.ProximityFragment">
+        android:descendantFocusability="blocksDescendants">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="3sp"
+            android:background="@color/colorMajorDark"
+            tools:ignore="ContentDescription,SmallSp" />
+
+        <include layout="@layout/layout_about_sensor" />
+
+        <include layout="@layout/layout_basic_information" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1sp"
-            android:background="@color/colorMajorDark"
-            tools:ignore="ContentDescription,SmallSp" />
+            android:background="@color/colorTextFive"
+            tools:ignore="ContentDescription,SmallSp"/>
 
-        <include layout="@layout/layout_basic_information" />
+        <include layout="@layout/layout_go_back_or_to_test" />
 
     </LinearLayout>
 
