--- a/app/src/main/res/layout/layout_go_back_or_to_test.xml
+++ b/app/src/main/res/layout/layout_go_back_or_to_test.xml
@@ -13,31 +13,23 @@
         android:id="@+id/go_back"
         android:background="@color/white">
 
-        <android.support.v7.widget.CardView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/red_shade_three"
-            app:cardCornerRadius="20sp"
-            tools:ignore="RtlHardcoded,RtlSymmetry"
+            android:textSize="16sp"
+            android:text="@string/go_back"
+            android:textColor="@color/red_shade_three"
+            android:background="@drawable/oval_button"
+            android:paddingLeft="20sp"
+            android:paddingRight="20sp"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp"
+            fontPath="fonts/tsc.ttf"
+            android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="@string/go_back"
-                android:textColor="@color/white"
-                android:paddingLeft="20sp"
-                android:paddingRight="20sp"
-                android:paddingTop="10sp"
-                android:paddingBottom="10sp"
-                fontPath="fonts/tsc.ttf"
-                android:gravity="center"
-                tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
-
-        </android.support.v7.widget.CardView>
+            android:layout_marginRight="10sp"
+            tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
 
     </FrameLayout>
 
@@ -48,31 +40,23 @@
         android:id="@+id/go_to_test"
         android:background="@color/white">
 
-        <android.support.v7.widget.CardView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/red_shade_three"
-            app:cardCornerRadius="20sp"
-            tools:ignore="RtlHardcoded,RtlSymmetry"
+            android:textSize="16sp"
+            android:text="@string/go_to_test"
+            android:textColor="@color/red_shade_three"
+            android:background="@drawable/oval_button"
+            android:paddingLeft="20sp"
+            android:paddingRight="20sp"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp"
+            fontPath="fonts/tsc.ttf"
+            android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="@string/go_to_test"
-                android:textColor="@color/white"
-                android:paddingLeft="20sp"
-                android:paddingRight="20sp"
-                android:paddingTop="10sp"
-                android:paddingBottom="10sp"
-                fontPath="fonts/tsc.ttf"
-                android:gravity="center"
-                tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
-
-        </android.support.v7.widget.CardView>
+            android:layout_marginRight="10sp"
+            tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
 
     </FrameLayout>
 
