--- a/app/src/main/res/layout/layout_about_sensor.xml
+++ b/app/src/main/res/layout/layout_about_sensor.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/colorAlmostWhite">
 
     <TextView
         android:layout_width="match_parent"
