--- a/app/src/main/res/layout/layout_basic_information.xml
+++ b/app/src/main/res/layout/layout_basic_information.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/colorAlmostWhite">
 
     <ImageView
         android:layout_width="match_parent"
