--- a/app/src/main/res/layout/layout_go_back_or_to_test.xml
+++ b/app/src/main/res/layout/layout_go_back_or_to_test.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/actionBarSize"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/colorAlmostWhite"
+    android:baselineAligned="false">
 
     <FrameLayout
         android:layout_width="0sp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:id="@+id/go_back"
-        android:background="@color/white">
+        android:id="@+id/go_back">
 
         <TextView
             android:layout_width="match_parent"
@@ -27,8 +28,7 @@
             fontPath="fonts/tsc.ttf"
             android:gravity="center"
             android:layout_gravity="center"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
+            android:layout_margin="10sp"
             tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
 
     </FrameLayout>
@@ -37,8 +37,7 @@
         android:layout_width="0sp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:id="@+id/go_to_test"
-        android:background="@color/white">
+        android:id="@+id/go_to_test">
 
         <TextView
             android:layout_width="match_parent"
@@ -54,8 +53,7 @@
             fontPath="fonts/tsc.ttf"
             android:gravity="center"
             android:layout_gravity="center"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
+            android:layout_margin="10sp"
             tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
 
     </FrameLayout>
