--- a/app/src/main/res/layout/row_basic_information.xml
+++ b/app/src/main/res/layout/row_basic_information.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/white">
+        android:background="@color/colorAlmostWhite">
 
         <ImageView
             android:layout_width="5sp"
