--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.main_activity.MainActivity">
+    tools:context=".view.test_activity.TestActivity"
+    android:background="@color/colorMajor">
 
     <FrameLayout
         android:layout_width="match_parent"
