--- a/app/src/main/res/layout/fragment_request_permissions.xml
+++ b/app/src/main/res/layout/fragment_request_permissions.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".view.main.request_permissons_fragment.RequestFragment">
+    tools:context=".view.main_activity.request_permissons_fragment.RequestFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
