--- a/app/src/main/res/layout/layout_go_back_or_to_test.xml
+++ b/app/src/main/res/layout/layout_go_back_or_to_test.xml
@@ -3,59 +3,48 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:background="@color/colorAlmostWhite"
-    android:baselineAligned="false">
+    android:baselineAligned="false"
+    android:layout_marginTop="5sp"
+    android:layout_marginBottom="5sp">
 
-    <FrameLayout
+    <TextView
+        android:id="@+id/go_back"
         android:layout_width="0sp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:id="@+id/go_back">
+        android:textSize="16sp"
+        android:text="@string/go_back"
+        android:textColor="@color/red_shade_three"
+        android:background="@drawable/oval_button"
+        android:paddingLeft="20sp"
+        android:paddingRight="20sp"
+        android:paddingTop="10sp"
+        android:paddingBottom="10sp"
+        fontPath="fonts/tsc.ttf"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_margin="10sp"
+        tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@string/go_back"
-            android:textColor="@color/red_shade_three"
-            android:background="@drawable/oval_button"
-            android:paddingLeft="20sp"
-            android:paddingRight="20sp"
-            android:paddingTop="10sp"
-            android:paddingBottom="10sp"
-            fontPath="fonts/tsc.ttf"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_margin="10sp"
-            tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
-
-    </FrameLayout>
-
-    <FrameLayout
+    <TextView
+        android:id="@+id/go_to_test"
         android:layout_width="0sp"
-        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:id="@+id/go_to_test">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@string/go_to_test"
-            android:textColor="@color/red_shade_three"
-            android:background="@drawable/oval_button"
-            android:paddingLeft="20sp"
-            android:paddingRight="20sp"
-            android:paddingTop="10sp"
-            android:paddingBottom="10sp"
-            fontPath="fonts/tsc.ttf"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_margin="10sp"
-            tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
-
-    </FrameLayout>
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="@string/go_to_test"
+        android:textColor="@color/red_shade_three"
+        android:background="@drawable/oval_button"
+        android:paddingLeft="20sp"
+        android:paddingRight="20sp"
+        android:paddingTop="10sp"
+        android:paddingBottom="10sp"
+        fontPath="fonts/tsc.ttf"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_margin="10sp"
+        tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
 
 </LinearLayout>
