--- a/app/src/main/res/layout/fragment_directions.xml
+++ b/app/src/main/res/layout/fragment_directions.xml
@@ -1,15 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.test_activity.directions_fragment.DirectionsFragment"
-    android:background="@color/red_shade_three">
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1sp"
+        android:background="@color/colorTextFive"
+        tools:ignore="ContentDescription,SmallSp" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:gravity="center_vertical">
 
-</FrameLayout>
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/red_shade_three"
+            app:cardCornerRadius="20sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginBottom="10sp"
+            tools:ignore="RtlHardcoded,RtlSymmetry">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="@string/directions"
+                android:textColor="@color/white"
+                android:paddingLeft="15sp"
+                android:paddingRight="15sp"
+                android:paddingTop="5sp"
+                android:paddingBottom="5sp"
+                android:id="@+id/data_type"
+                fontPath="fonts/tsc.ttf"
+                tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
+
+        </android.support.v7.widget.CardView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="23sp"
+            android:textColor="@color/red_shade_three"
+            android:text="@string/proximity_direction"
+            android:padding="10sp"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10sp"
+            android:paddingRight="10sp"
+            android:paddingBottom="10sp">
+
+            <ImageView
+                android:layout_width="5sp"
+                android:layout_height="match_parent"
+                android:background="@color/red_shade_three"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@color/red_shade_three"
+                android:text="@string/proximity_hint"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"
+                android:paddingTop="5sp"
+                android:paddingBottom="5sp"/>
+
+        </FrameLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:id="@+id/start_test"
+            android:text="@string/start_test"
+            android:textColor="@color/red_shade_three"
+            android:paddingLeft="20sp"
+            android:paddingRight="20sp"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp"
+            fontPath="fonts/tsc.ttf"
+            android:layout_marginTop="20sp"
+            android:layout_marginBottom="10sp"
+            android:gravity="center_horizontal"
+            android:background="@drawable/oval_button"
+            android:layout_gravity="center_horizontal"
+            tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
+
+    </LinearLayout>
+
+</LinearLayout>
