correct animations for test activity enter exit test and dirn fragments

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.test_activity.TestActivity"
-    android:background="@color/colorMajor">
+    tools:context=".view.test_activity.TestActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
