accelerometer sensor test done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,6 +52,7 @@
     <color name="colorIntensity10">#c8ffffff</color>
 
     <color name="colorAlmostWhite">#fbfbfb</color>
+    <color name="white_tx">#bbfbfbfb</color>
 
     <array name="intensityColors">
         <item>#212121</item>
