--- a/app/src/main/res/layout/fragment_proximity_test.xml
+++ b/app/src/main/res/layout/fragment_proximity_test.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.test_activity.proximity_fragment.ProximityTestFragment"
+    tools:context=".view.test_activity.proximity_test_fragment.ProximityTestFragment"
     android:background="@color/white"
     android:orientation="vertical">
 
