--- a/app/src/main/res/layout/activity_learn_more.xml
+++ b/app/src/main/res/layout/activity_learn_more.xml
@@ -29,10 +29,49 @@
         android:background="@color/colorMajorDark"
         tools:ignore="ContentDescription,SmallSp" />
 
-    <View
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:background="@color/white">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="?android:attr/actionBarSize"
+                android:text="SAR AND YOUR BODY"
+                android:textSize="18sp"
+                android:textColor="@color/colorTextOne"
+                android:gravity="center"
+                android:id="@+id/header_text"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sar is a thing that pops your head away for some reason that you honestly dont want to know I might have oversaturated by brains capacity today for this sense it all project but maybe i want to prove myself that i can make an optimum project.\n\n
+Sar is a thing that pops your head away for some reason that you honestly dont want to know I might have oversaturated by brains capacity today for this sense it all project but maybe i want to prove myself that i can make an optimum project.\n\n
+Sar is a thing that pops your head away for some reason that you honestly dont want to know I might have oversaturated by brains capacity today for this sense it all project but maybe i want to prove myself that i can make an optimum project.\n\n
+"
+                android:textSize="15sp"
+                android:textColor="@color/colorTextTwo"
+                android:id="@+id/description_text"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="300sp"
+                android:background="@color/colorTextThree"
+                android:id="@+id/text_image"
+                tools:ignore="ContentDescription" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <ImageView
         android:layout_width="match_parent"
