--- a/app/src/main/res/layout/fragment_gps.xml
+++ b/app/src/main/res/layout/fragment_gps.xml
@@ -1,37 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context=".view.detail_activity.features.gps_location.GpsFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:descendantFocusability="blocksDescendants">
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:id="@+id/map_container"
+        android:clickable="false">
 
-        <ImageView
+    </FrameLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        tools:context=".view.detail_activity.features.gps_location.GpsFragment">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="3sp"
-            android:background="@color/colorMajorDark"
-            tools:ignore="ContentDescription,SmallSp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:descendantFocusability="blocksDescendants">
 
-        <include layout="@layout/layout_about_sensor" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="3sp"
+                android:background="@color/colorMajorDark"
+                tools:ignore="ContentDescription,SmallSp" />
 
-        <include layout="@layout/layout_basic_information" />
+            <include layout="@layout/layout_about_sensor" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1sp"
-            android:background="@color/colorTextFive"
-            tools:ignore="ContentDescription,SmallSp"/>
+            <include layout="@layout/layout_basic_information" />
 
-        <include layout="@layout/layout_go_back_or_to_test" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1sp"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription,SmallSp"/>
 
-    </LinearLayout>
+            <include layout="@layout/layout_go_back_or_to_test" />
 
-</android.support.v4.widget.NestedScrollView>
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+</FrameLayout>
+
 
