all sensors and features complete for v2.0

--- a/app/src/main/res/layout/layout_rate.xml
+++ b/app/src/main/res/layout/layout_rate.xml
@@ -166,7 +166,7 @@
                 android:textColor="@color/colorMajorDark"
                 android:layout_gravity="center_vertical"
                 android:textSize="13sp"
-                android:text="Drawing Options In Screen Test"
+                android:text="Augmented Reality"
                 android:background="@drawable/feedback_background"
                 android:paddingLeft="20sp"
                 android:paddingRight="20sp"
@@ -180,7 +180,7 @@
                 android:textColor="@color/colorMajorDark"
                 android:layout_gravity="center_vertical"
                 android:textSize="13sp"
-                android:text="More Tests In Feature Category"
+                android:text="Virtual Reality"
                 android:background="@drawable/feedback_background"
                 android:paddingLeft="20sp"
                 android:paddingRight="20sp"
@@ -208,7 +208,7 @@
                 android:textColor="@color/colorMajorDark"
                 android:layout_gravity="center_vertical"
                 android:textSize="13sp"
-                android:text="Augmented Reality"
+                android:text="Drawing Options In Screen Test"
                 android:background="@drawable/feedback_background"
                 android:paddingLeft="20sp"
                 android:paddingRight="20sp"
